--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
-    <title>Dan's site</title>
-	<meta name="Dan O" content="Masters thesis"/>
+    <title>Daniel Oniszeczko - Mel Hoppenheim school of cinema</title>
+	<meta name="Mel Hoppenheim school of cinema" content="Masters thesis"/>
+	<meta name="description" content="exhbition for masters thesis" />
+    <meta name="keywords" content="film, masters, thesis, concordia, hoppenheim" />
+    <meta name="author" content="Jezzamon" />
 	<link rel="stylesheet" type="text/css" href="dist/semantic.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
