--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Daniel Oniszeczko - Mel Hoppenheim school of cinema</title>
 	<meta name="Mel Hoppenheim school of cinema" content="Masters thesis"/>
-	<meta name="description" content="exhbition for masters thesis" />
+	<meta name="description" content="Mel Hoppenheim school of cinema - exhbition for masters thesis" />
     <meta name="keywords" content="film, masters, thesis, concordia, hoppenheim" />
     <meta name="author" content="Jezzamon" />
 	<link rel="stylesheet" type="text/css" href="dist/semantic.css">
